--- a/main/MavenThought.MediaLibrary.Desktop/AddMovie/AddMovieView.xaml
+++ b/main/MavenThought.MediaLibrary.Desktop/AddMovie/AddMovieView.xaml
@@ -8,9 +8,7 @@
              MinWidth="30"
              DockPanel.Dock="Top">
     <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
-        <TextBox Width="200"
-                 Text="{Binding Title}"/>
-        <Button Width="100"
-                Command="{Binding Add}">Add</Button>
+        <TextBox Width="200" Text="{Binding Title}"/>
+        <Button Width="100" Command="{Binding Add}" Content="Add"/>
     </StackPanel>
 </UserControl>
