--- a/main/MavenThought.MediaLibrary.Desktop/Poster/PosterView.xaml
+++ b/main/MavenThought.MediaLibrary.Desktop/Poster/PosterView.xaml
@@ -2,12 +2,18 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:gif="http://wpfanimatedgif.codeplex.com" mc:Ignorable="d" 
              d:DesignHeight="300" 
              d:DesignWidth="300"
              Width="200"
              Background="Bisque"
              DockPanel.Dock="Right">
-    <Image Source="{Binding Poster}"/>
+    <Grid>
+        <Grid.Resources>
+            <BooleanToVisibilityConverter x:Key="boolToVisConverter"/>
+        </Grid.Resources>
+        <Image Width="200" Source="{Binding Poster}" Visibility="{Binding Path=IsNotBusy, Converter={StaticResource boolToVisConverter}}" />
+        <Image gif:ImageBehavior.AnimatedSource="../Images/countdown.gif" Visibility="{Binding Path=IsBusy, Converter={StaticResource boolToVisConverter}}" />
+    </Grid>
 </UserControl>
