--- a/main/MavenThought.MediaLibrary.Desktop/Views/AddMovie/AddMovieView.xaml
+++ b/main/MavenThought.MediaLibrary.Desktop/Views/AddMovie/AddMovieView.xaml
@@ -1,14 +1,18 @@
-﻿<UserControl x:Class="MavenThought.MediaLibrary.Desktop.AddMovie.AddMovieView"
+<UserControl x:Class="MavenThought.MediaLibrary.Desktop.Views.AddMovie.AddMovieView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="20" d:DesignWidth="300"
+             d:DesignHeight="20" d:DesignWidth="400"
              MinWidth="30"
              DockPanel.Dock="Top">
     <StackPanel Orientation="Horizontal" DockPanel.Dock="Top">
-        <TextBox Width="200" Text="{Binding Title}"/>
-        <Button Width="100" Command="{Binding Add}" Content="Add"/>
+        <TextBox Width="200"
+                 Text="{Binding Title}"/>
+        <Button Width="100" HorizontalAlignment="Left"
+                Command="{Binding Add}">Add</Button>
+        <Button Width="100" HorizontalAlignment="Left"
+                Command="{Binding Path=Delete}" Content="Delete" />
     </StackPanel>
 </UserControl>
