--- a/main/MavenThought.MediaLibrary.Desktop/Views/Reviews/ReviewsView.xaml
+++ b/main/MavenThought.MediaLibrary.Desktop/Views/Reviews/ReviewsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MavenThought.MediaLibrary.Desktop.Reviews.ReviewsView"
+<UserControl x:Class="MavenThought.MediaLibrary.Desktop.Views.Reviews.ReviewsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
